--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -19,7 +19,18 @@
    "source": [
     "# On teste l'embedding de HuggingFace\n",
     "!pip install sentence-transformers\n",
+    "!pip install chromadb\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain.vectorstores import Chroma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7838d50b-03af-4caa-8f9e-6243a5404065",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "embeddings = HuggingFaceEmbeddings()"
    ]
   },
@@ -58,10 +69,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7a4c4493-2042-4af6-b510-d20c43337c7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rappel : on a créé md_header_splits dans le programme split\n",
+    "print(len(md_header_splits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3e5e1d9f-114f-4e26-97ed-30fc7ead3d45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Stockage dans le vectorstore"
+   ]
   },
   {
    "cell_type": "code",
@@ -69,7 +93,9 @@
    "id": "487f3fb7-f2e1-4da9-b4b6-4b533e88f27f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "persist_directory = 'docs/chroma/'"
+   ]
   },
   {
    "cell_type": "code",
@@ -77,7 +103,9 @@
    "id": "63e3944b-fffc-40e7-b058-c44b469d39f4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!rm -rf ./docs/chroma  # remove old database files if any"
+   ]
   },
   {
    "cell_type": "code",
@@ -85,7 +113,13 @@
    "id": "272a821b-90c7-4002-ab25-6a199b369091",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vectordb = Chroma.from_documents(\n",
+    "    documents=md_header_splits,\n",
+    "    embedding=embedding,\n",
+    "    persist_directory=persist_directory\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
