Ajout de QA chain dans Recap

--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -126,6 +126,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "83ede5aa-7c00-4b4a-9456-60fb4d7fcc31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7f06cbfa-3c17-4ad3-8788-34389d019eba",
    "metadata": {},
    "outputs": [],
@@ -273,10 +281,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f130ee6-3199-46ea-b5a4-07d4eb1d6dab",
+   "id": "ccb54dd2-d923-4cd2-9f43-8a4a356bafa7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from transformers import pipeline\n",
+    "generator = pipeline('text-generation', model = 'bigscience/bloomz-560m', min_new_tokens=60)"
+   ]
   },
   {
    "cell_type": "code",
@@ -288,8 +299,7 @@
     "# model='gpt2' --> dépassement de max tokens\n",
     "from langchain import HuggingFacePipeline\n",
     "document_content_description = \"Questions les plus fréquentes\"\n",
-    "llm = HuggingFacePipeline(pipeline=pipeline('text-generation',model='databricks/dolly-v2-3b',torch_dtype=torch.bfloat16,\\\n",
-    "                                            max_length=2000,trust_remote_code=True))\n",
+    "llm = HuggingFacePipeline(pipeline=generator)\n",
     "retriever = SelfQueryRetriever.from_llm(\n",
     "    llm,\n",
     "    vectordb,\n",
@@ -303,21 +313,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b15738a8-ad7e-4cb4-a71b-2301f94aa1f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "question = \"Je n'arrive pas à obtenir ma fiche Insee\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "59b46894-4178-4691-8d79-90c9b17ca49a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs = retriever.get_relevant_documents(question)"
+    "# Ne marche pas\n",
+    "#docs = retriever.get_relevant_documents(question)"
    ]
   },
   {
@@ -326,7 +327,9 @@
    "id": "8f31af72-639b-4789-ab87-23b94033347b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Retrieval QA chain"
+   ]
   },
   {
    "cell_type": "code",
@@ -334,7 +337,9 @@
    "id": "c2f6b08c-d2eb-43cd-8a04-444fc93e55e0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain.chains import RetrievalQA"
+   ]
   },
   {
    "cell_type": "code",
@@ -342,7 +347,12 @@
    "id": "cc676655-b339-4ac6-ae49-c08a213f5a10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm,\n",
+    "    retriever=vectordb.as_retriever()\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -350,7 +360,10 @@
    "id": "97fb0f6c-2318-4e63-aa1d-d56a38cfd6ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "question = \"Comment obtenir mon avis de situation ?\"\n",
+    "result = qa_chain({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -358,7 +371,9 @@
    "id": "cb79a11a-81e5-4800-b6dd-bdfb0962d0ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result[\"result\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -366,7 +381,9 @@
    "id": "697db7e7-846f-40f3-9366-bac38f8fb76d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Prompt"
+   ]
   },
   {
    "cell_type": "code",
@@ -374,7 +391,16 @@
    "id": "ab368c5c-b2f6-45af-8a92-a212b569a5b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "# Build prompt\n",
+    "template = \"\"\"Utilisez les informations ci-dessous pour répondre en langue française à la question à la fin du texte. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer une réponse. Répondez en cinq phrases maximum, de manière concise. \n",
+    "{context}\n",
+    "Question: {question}\n",
+    "Réponse utile:\"\"\"\n",
+    "QA_CHAIN_PROMPT = PromptTemplate.from_template(template)"
+   ]
   },
   {
    "cell_type": "code",
@@ -382,7 +408,25 @@
    "id": "5313b2ce-0cb2-4aa0-b88e-d66f878c359a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run chain\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm,\n",
+    "    retriever=vectordb.as_retriever(),\n",
+    "    return_source_documents=True,\n",
+    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b692111b-d4be-4879-a184-3d8daa29b821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Comment obtenir mon avis de situation ? En en\""
+   ]
   },
   {
    "cell_type": "code",
@@ -390,12 +434,68 @@
    "id": "a13f952e-9fc0-42fd-a39a-e35a78741e59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = qa_chain({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c87ac2aa-6c9e-4d94-bfee-c189f04e7ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result[\"result\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "277cfae9-b53e-410a-81f8-39b28ee5acd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grâce à la chaîne, on peut aussi voir quels documents ont été les plus pertinents pour \n",
+    "for i in range(len(result[\"source_documents\"])):\n",
+    "    print(result[\"source_documents\"][i],'\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1f6e2bc-5536-4156-ac76-3132bd739ffe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eed6486e-37b7-4d08-a472-583e20267548",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79b39d33-e70b-439d-97c0-162e445630aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c7e1a58-2fac-41cd-ad58-e7532ed71f99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ff04053-1df2-4c11-9d6a-933d5b546efa",
    "metadata": {},
    "outputs": [],
    "source": []
