Test de plusieurs modèles dans Recap

--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -16,10 +16,11 @@
     "!pip install chromadb\n",
     "!{sys.executable} -m pip install --upgrade pip setuptools wheel\n",
     "!{sys.executable} -m pip install --disable-pip-version-check torch torchdata\n",
-    "!{sys.executable} -m pip install transformers==4.27.2 \n",
+    "!pip install -U transformers\n",
     "!pip install -U datasets==2.14.6\n",
     "!pip install fsspec==2023.9.2\n",
-    "!pip install lark"
+    "!pip install lark\n",
+    "!pip install gpt4all"
    ]
   },
   {
@@ -42,7 +43,15 @@
     "from transformers import AutoModelForSeq2SeqLM\n",
     "from transformers import AutoTokenizer\n",
     "from transformers import GenerationConfig\n",
-    "from transformers import pipeline"
+    "from transformers import pipeline\n",
+    "from transformers import pipeline\n",
+    "from langchain import HuggingFacePipeline\n",
+    "import os\n",
+    "import s3fs\n",
+    "from langchain.globals import set_verbose\n",
+    "set_verbose(True)\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import RetrievalQA"
    ]
   },
   {
@@ -169,7 +178,7 @@
    "outputs": [],
    "source": [
     "# Vider le dossier à la main ou utiliser cette ligne si besoin\n",
-    "!rm -rf ./docs/chroma  # remove old database files if any"
+    "!rm -rf ./chroma  # remove old database files if any"
    ]
   },
   {
@@ -219,13 +228,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dbbe9d70-881b-4660-b100-b82066a3ae48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5943b482-bebb-4a56-81f4-3239832f3170",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Let's save this so we can use it later!\n",
-    "vectordb.persist()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -281,94 +295,158 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccb54dd2-d923-4cd2-9f43-8a4a356bafa7",
+   "id": "93b30800-5aef-4921-9fdb-9084de796531",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import pipeline\n",
-    "generator = pipeline('text-generation', model = 'bigscience/bloomz-560m', min_new_tokens=60)"
+    "# Build prompt llama\n",
+    "template_llama = \"\"\"<<SYS>>\\nVous êtes un assistant cordial et efficace, qui répond en langue française aux questions des usagers en fonction des informations de contexte ci-dessous. \n",
+    "Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer une réponse. Répondez en cinq phrases maximum, de manière concise. \n",
+    "\\n<</SYS>>\n",
+    "\\n\\n [INST] À l'aide des informations ci-dessous, répondez s'il-vous-plaît à la question suivante de l'usager : {question}\n",
+    "\\n\\n\n",
+    "Éléments de contexte : \n",
+    "\\n\n",
+    "{context}\n",
+    "\\n\\n\n",
+    "[/INST]\"\"\"\n",
+    "QA_CHAIN_PROMPT_llama = PromptTemplate.from_template(template_llama)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd90c93-d4bf-4eb2-8d08-9bd644889cf0",
+   "id": "035f9edf-f570-4c46-9aea-fa15a78d03c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model='gpt2' --> dépassement de max tokens\n",
-    "from langchain import HuggingFacePipeline\n",
-    "document_content_description = \"Questions les plus fréquentes\"\n",
-    "llm = HuggingFacePipeline(pipeline=generator)\n",
-    "retriever = SelfQueryRetriever.from_llm(\n",
-    "    llm,\n",
-    "    vectordb,\n",
-    "    document_content_description,\n",
-    "    metadata_field_info,\n",
-    "    verbose=True,\n",
-    "    handle_parsing_errors=True\n",
+    "# Build prompt\n",
+    "template = \"\"\"Vous êtes un assistant cordial et efficace, qui aide en langue française des usagers qui ont un problème ou posent une question. Utilisez les informations de contexte situées après le problème posé. \n",
+    "Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer une réponse.\n",
+    "\\n\n",
+    "À l'aide des informations ci-dessous, répondez s'il-vous-plaît au problème posé par l'usager : {question}.\n",
+    "\\n\\n\n",
+    "Informations de contexte : \n",
+    "\\n\n",
+    "{context}\n",
+    "\\n\\n\"\"\"\n",
+    "QA_CHAIN_PROMPT_llama = PromptTemplate.from_template(template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8848a6a-f0ce-4fcf-9f64-9adbe6f41758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Si on utilise un modèle téléchargé, par exemple nous-hermes-llama2-13b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "631b2bcc-7979-4ffa-b0c7-a9b04730c011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S3_ENDPOINT_URL = \"https://\" + os.environ[\"AWS_S3_ENDPOINT\"]\n",
+    "fs = s3fs.S3FileSystem(client_kwargs={'endpoint_url': S3_ENDPOINT_URL})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33fbaafb-6052-42ad-a575-20e4298a4ce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs.ls(\"vlapegue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79d816a9-ebf1-4567-820e-a127479c134a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket = 'vlapegue/nous-hermes-llama2-13b'\n",
+    "files = fs.ls(bucket)[-3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a839760-c443-43bc-a74c-a7b21ebdfdae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1d96fbd-0939-43df-8f3a-966f8c9ead3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs.download(files[1],'nous-hermes-llama2-13b.Q4_0.gguf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e40151b0-0a2d-441b-9795-a40ed9f53f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms import GPT4All\n",
+    "\n",
+    "llm = GPT4All(\n",
+    "    model='./nous-hermes-llama2-13b.Q4_0.gguf'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b46894-4178-4691-8d79-90c9b17ca49a",
+   "id": "8a637402-564d-4c4b-85a0-b16f2c50a67b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Ne marche pas\n",
-    "#docs = retriever.get_relevant_documents(question)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f31af72-639b-4789-ab87-23b94033347b",
+   "id": "d5968075-1b51-4917-bca0-66b2c99b0d29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieval QA chain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2f6b08c-d2eb-43cd-8a04-444fc93e55e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chains import RetrievalQA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc676655-b339-4ac6-ae49-c08a213f5a10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Run chain\n",
     "qa_chain = RetrievalQA.from_chain_type(\n",
     "    llm,\n",
-    "    retriever=vectordb.as_retriever()\n",
+    "    retriever=vectordb.as_retriever(),\n",
+    "    return_source_documents=True, verbose=True,\n",
+    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT_llama}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97fb0f6c-2318-4e63-aa1d-d56a38cfd6ac",
+   "id": "d9f41f7e-7369-423a-997c-e1560e55517f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"Comment obtenir mon avis de situation ?\"\n",
     "result = qa_chain({\"query\": question})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb79a11a-81e5-4800-b6dd-bdfb0962d0ec",
+   "id": "511c05b6-f963-4d9e-a9c8-bddc4a12476b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,34 +456,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "697db7e7-846f-40f3-9366-bac38f8fb76d",
+   "id": "51e791f7-07fd-4dab-9171-086e3444642c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prompt"
+    "# Grâce à la chaîne, on peut aussi voir quels documents ont été les plus pertinents pour répondre\n",
+    "for i in range(len(result[\"source_documents\"])):\n",
+    "    print(result[\"source_documents\"][i],'\\n\\n')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab368c5c-b2f6-45af-8a92-a212b569a5b1",
+   "id": "23355441-3c8a-4632-905e-e90eb7a2285e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6bfd15a-b140-4753-aca1-0250a69381bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
-    "# Build prompt\n",
-    "template = \"\"\"Utilisez les informations ci-dessous pour répondre en langue française à la question à la fin du texte. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer une réponse. Répondez en cinq phrases maximum, de manière concise. \n",
-    "{context}\n",
-    "Question: {question}\n",
-    "Réponse utile:\"\"\"\n",
-    "QA_CHAIN_PROMPT = PromptTemplate.from_template(template)"
+    "# Si on utilise un modèle via le pipeline de HuggingFace, par exemple bigscience/bloomz-560m"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5313b2ce-0cb2-4aa0-b88e-d66f878c359a",
+   "id": "ac29d8a2-b00f-4e10-8a53-6f1abe1ef77b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_bloom = pipeline('text-generation', model = 'bigscience/bloomz-560m', min_new_tokens=60)\n",
+    "llm = HuggingFacePipeline(pipeline=gen_bloom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f8b55ad-221b-439b-a571-13160c617786",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +505,7 @@
     "qa_chain = RetrievalQA.from_chain_type(\n",
     "    llm,\n",
     "    retriever=vectordb.as_retriever(),\n",
-    "    return_source_documents=True,\n",
+    "    return_source_documents=True, verbose=True,\n",
     "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT}\n",
     ")"
    ]
@@ -421,17 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b692111b-d4be-4879-a184-3d8daa29b821",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "question = \"Comment obtenir mon avis de situation ? En en\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a13f952e-9fc0-42fd-a39a-e35a78741e59",
+   "id": "1eb5d7fb-70e6-47f1-b741-aec507187ebb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c87ac2aa-6c9e-4d94-bfee-c189f04e7ec8",
+   "id": "aff6e529-487c-4e34-ac46-ffe30b7f49a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grâce à la chaîne, on peut aussi voir quels documents ont été les plus pertinents pour \n",
+    "# Grâce à la chaîne, on peut aussi voir quels documents ont été les plus pertinents pour répondre\n",
     "for i in range(len(result[\"source_documents\"])):\n",
     "    print(result[\"source_documents\"][i],'\\n\\n')"
    ]
@@ -474,7 +556,25 @@
    "id": "eed6486e-37b7-4d08-a472-583e20267548",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run chain avec un modèle orca mini\n",
+    "from gpt4all import GPT4All\n",
+    "model = GPT4All(\"orca-mini-3b-gguf2-q4_0.gguf\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e587b47-1c3f-4d8e-8347-1a432bd1c09d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms import GPT4All\n",
+    "\n",
+    "llm = GPT4All(\n",
+    "    model='orca-mini-3b-gguf2-q4_0.gguf',temp=0.1\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -482,7 +582,15 @@
    "id": "79b39d33-e70b-439d-97c0-162e445630aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run chain\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm,\n",
+    "    retriever=vectordb.as_retriever(),\n",
+    "    return_source_documents=True, verbose=True,\n",
+    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT}\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -490,7 +598,9 @@
    "id": "6c7e1a58-2fac-41cd-ad58-e7532ed71f99",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = qa_chain({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -498,12 +608,164 @@
    "id": "9ff04053-1df2-4c11-9d6a-933d5b546efa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result[\"result\"]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2118bb64-8172-489c-8f85-cf026e751b75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grâce à la chaîne, on peut aussi voir quels documents ont été les plus pertinents pour répondre\n",
+    "for i in range(len(result[\"source_documents\"])):\n",
+    "    print(result[\"source_documents\"][i],'\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c26a77b2-eec5-411c-aeae-823c846aab3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3d28644-05cc-49b9-a2a5-91206bfcb6ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On télécharge llama2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f870a71-e247-4b60-9235-9798161d6e4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd22efc8-f2ad-41cb-8b91-a976d88d0a2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9533b247-eb28-4aa3-99c9-0abb1721ebab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bb2a1e8-b215-46a5-ae75-983b7c45e8b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "317cbb52-d78b-4193-95a7-396a4a89911b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67f3df60-4ffd-464a-907b-fc9e81d98824",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ab58f8e-47e8-42ff-9ec2-15f3b5a7da5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39dbd592-d3c9-457f-8988-cd348a30295c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "423c087f-77cb-4a99-8967-d4956b3ac843",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1994cfb1-88c1-4ea9-a9f4-f0c5471da8d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef5c42b8-afc2-4653-b9fd-ccab0867ddc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32f3a3e6-ffda-412c-812a-8c99b4783f20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab951aff-dd62-41ee-857c-7948c7c7469c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78c95877-7855-4769-b0eb-6074b3949a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c688580-64e6-4a8a-bc50-9129fe22565e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afe7f3ee-239c-4631-a72f-498217decf3f",
    "metadata": {},
    "outputs": [],
    "source": []
