--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -20,7 +20,9 @@
     "!pip install -U datasets==2.14.6\n",
     "!pip install fsspec==2023.9.2\n",
     "!pip install lark\n",
-    "!pip install gpt4all"
+    "!pip install gpt4all\n",
+    "! pip install accelerate\n",
+    "# au terminal : huggingface-cli login puis token"
    ]
   },
   {
@@ -157,6 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "embeddings_multilingual = HuggingFaceEmbeddings(model_name='sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2')\n",
     "embeddings = HuggingFaceEmbeddings()"
    ]
   },
@@ -299,18 +302,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build prompt llama\n",
-    "template_llama = \"\"\"<<SYS>>\\nVous êtes un assistant cordial et efficace, qui répond en langue française aux questions des usagers en fonction des informations de contexte ci-dessous. \n",
-    "Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer une réponse. Répondez en cinq phrases maximum, de manière concise. \n",
+    "# Build prompt llama chat\n",
+    "template_chat = \"\"\"<s>[INST] <<SYS>>\n",
+    "\\n\n",
+    "Vous êtes un assistant cordial, utile et honnête, qui répond en langue française aux questions ou aux problèmes posés par des usagers. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse. \n",
     "\\n<</SYS>>\n",
-    "\\n\\n [INST] À l'aide des informations ci-dessous, répondez s'il-vous-plaît à la question suivante de l'usager : {question}\n",
+    "\\n\n",
+    "À l'aide du contexte ci-dessous, répondez s'il-vous-plaît au problème suivant posé par un usager : {question}\n",
     "\\n\\n\n",
-    "Éléments de contexte : \n",
+    "Contexte : \n",
     "\\n\n",
     "{context}\n",
-    "\\n\\n\n",
     "[/INST]\"\"\"\n",
-    "QA_CHAIN_PROMPT_llama = PromptTemplate.from_template(template_llama)"
+    "QA_CHAIN_PROMPT_chat = PromptTemplate.from_template(template_chat)"
    ]
   },
   {
@@ -330,7 +334,7 @@
     "\\n\n",
     "{context}\n",
     "\\n\\n\"\"\"\n",
-    "QA_CHAIN_PROMPT_llama = PromptTemplate.from_template(template)"
+    "QA_CHAIN_PROMPT = PromptTemplate.from_template(template)"
    ]
   },
   {
@@ -648,7 +652,24 @@
    "id": "1f870a71-e247-4b60-9235-9798161d6e4d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load model directly\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-2-7b-hf\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-hf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f34fc8e3-eb3e-4e7c-8011-e82741730c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_llama = pipeline('text-generation', model = model, tokenizer=tokenizer,min_new_tokens=60)\n",
+    "llm = HuggingFacePipeline(pipeline=gen_llama)"
+   ]
   },
   {
    "cell_type": "code",
@@ -656,7 +677,15 @@
    "id": "dd22efc8-f2ad-41cb-8b91-a976d88d0a2f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run chain\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm,\n",
+    "    retriever=vectordb.as_retriever(),\n",
+    "    return_source_documents=True, verbose=True,\n",
+    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT}\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -664,7 +693,9 @@
    "id": "9533b247-eb28-4aa3-99c9-0abb1721ebab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = qa_chain({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -672,7 +703,9 @@
    "id": "2bb2a1e8-b215-46a5-ae75-983b7c45e8b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result[\"result\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -688,7 +721,33 @@
    "id": "67f3df60-4ffd-464a-907b-fc9e81d98824",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Avec llama2 chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad446f34-55d5-46aa-a0b6-761d13e19f8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-2-7b-chat-hf\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-chat-hf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7a626cc-1581-4164-89ce-5ef33f9ba5ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_llama_chat = pipeline('text-generation', model = model, tokenizer=tokenizer,min_new_tokens=60)\n",
+    "llm = HuggingFacePipeline(pipeline=gen_llama)"
+   ]
   },
   {
    "cell_type": "code",
@@ -696,7 +755,15 @@
    "id": "8ab58f8e-47e8-42ff-9ec2-15f3b5a7da5e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run chain\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm,\n",
+    "    retriever=vectordb.as_retriever(),\n",
+    "    return_source_documents=True, verbose=True,\n",
+    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT_chat}\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -704,7 +771,9 @@
    "id": "39dbd592-d3c9-457f-8988-cd348a30295c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = qa_chain({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -712,7 +781,9 @@
    "id": "423c087f-77cb-4a99-8967-d4956b3ac843",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result[\"result\"]"
+   ]
   },
   {
    "cell_type": "code",
