Ajout Llama chat dans Recap

--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings_multilingual = HuggingFaceEmbeddings(model_name='sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2')\n",
+    "#embeddings_multilingual = HuggingFaceEmbeddings(model_name='sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2')\n",
     "embeddings = HuggingFaceEmbeddings()"
    ]
   },
@@ -305,10 +305,10 @@
     "# Build prompt llama chat\n",
     "template_chat = \"\"\"<s>[INST] <<SYS>>\n",
     "\\n\n",
-    "Vous êtes un assistant cordial, utile et honnête, qui répond en langue française aux questions ou aux problèmes posés par des usagers. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse. \n",
+    "Vous êtes un assistant conversationnel cordial et honnête, qui répond, uniquement en langue française, aux questions ou aux problèmes posés par un usager. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse. \n",
     "\\n<</SYS>>\n",
     "\\n\n",
-    "À l'aide du contexte ci-dessous, répondez s'il-vous-plaît au problème suivant posé par un usager : {question}\n",
+    "À l'aide du contexte ci-dessous, répondez, uniquement en langue française, au problème suivant posé par un usager : {question}\n",
     "\\n\\n\n",
     "Contexte : \n",
     "\\n\n",
@@ -325,15 +325,14 @@
    "outputs": [],
    "source": [
     "# Build prompt\n",
-    "template = \"\"\"Vous êtes un assistant cordial et efficace, qui aide en langue française des usagers qui ont un problème ou posent une question. Utilisez les informations de contexte situées après le problème posé. \n",
-    "Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer une réponse.\n",
-    "\\n\n",
-    "À l'aide des informations ci-dessous, répondez s'il-vous-plaît au problème posé par l'usager : {question}.\n",
-    "\\n\\n\n",
-    "Informations de contexte : \n",
+    "template = \"\"\"Vous êtes un assistant conversationnel cordial et honnête, qui répond, uniquement en langue française, aux questions ou aux problèmes posés par un usager. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse.\n",
+    "\n",
+    "À l'aide du contexte ci-dessous, répondez au problème suivant posé par un usager : {question}\n",
+    "\n",
+    "Contexte : \n",
     "\\n\n",
     "{context}\n",
-    "\\n\\n\"\"\"\n",
+    "\"\"\"\n",
     "QA_CHAIN_PROMPT = PromptTemplate.from_template(template)"
    ]
   },
@@ -409,7 +408,7 @@
     "from langchain.llms import GPT4All\n",
     "\n",
     "llm = GPT4All(\n",
-    "    model='./nous-hermes-llama2-13b.Q4_0.gguf'\n",
+    "    model='./nous-hermes-llama2-13b.Q4_0.gguf',temp=0.1\n",
     ")"
    ]
   },
@@ -433,7 +432,7 @@
     "    llm,\n",
     "    retriever=vectordb.as_retriever(),\n",
     "    return_source_documents=True, verbose=True,\n",
-    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT_llama}\n",
+    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT}\n",
     ")"
    ]
   },
@@ -735,7 +734,7 @@
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-2-7b-chat-hf\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-chat-hf\")"
+    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-chat-hf\",do_sample=True, temperature=0.1)"
    ]
   },
   {
@@ -745,8 +744,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_llama_chat = pipeline('text-generation', model = model, tokenizer=tokenizer,min_new_tokens=60)\n",
-    "llm = HuggingFacePipeline(pipeline=gen_llama)"
+    "gen_llama_chat = pipeline('text-generation', model = model, tokenizer=tokenizer)\n",
+    "llm = HuggingFacePipeline(pipeline=gen_llama_chat)"
    ]
   },
   {
@@ -772,6 +771,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "question = \"Où puis-je obtenir mon avis de situation ?\"\n",
     "result = qa_chain({\"query\": question})"
    ]
   },
