--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -799,7 +799,9 @@
    "id": "ef5c42b8-afc2-4653-b9fd-ccab0867ddc9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Gestion de la mémoire"
+   ]
   },
   {
    "cell_type": "code",
@@ -807,7 +809,15 @@
    "id": "32f3a3e6-ffda-412c-812a-8c99b4783f20",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# On garde en mémoire l'historique des messages\n",
+    "# Return_messages = True signifie qu'on met les messages passés sous forme de liste, \n",
+    "# et non de la forme d'un simple texte\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "memory = ConversationBufferMemory(\n",
+    "    memory_key=\"chat_history\",\n",
+    "    return_messages=True"
+   ]
   },
   {
    "cell_type": "code",
@@ -815,7 +825,16 @@
    "id": "ab951aff-dd62-41ee-857c-7948c7c7469c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Le module ConversationalRetrievalChain gère la mémoire\n",
+    "from langchain.chains import ConversationalRetrievalChain\n",
+    "retriever=vectordb.as_retriever()\n",
+    "qa_memory = ConversationalRetrievalChain.from_llm(\n",
+    "    llm,\n",
+    "    retriever=retriever,\n",
+    "    memory=memory\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -823,7 +842,10 @@
    "id": "78c95877-7855-4769-b0eb-6074b3949a3b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "question = \"Où puis-je obtenir mon avis de situation ?\"\n",
+    "result = qa_memory({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -831,12 +853,382 @@
    "id": "0c688580-64e6-4a8a-bc50-9129fe22565e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result['answer']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "afe7f3ee-239c-4631-a72f-498217decf3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Je ne sais pas si mes données sont diffusées\"\n",
+    "result = qa_memory({\"query\": question})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54df233a-70c1-4029-b7fe-e4cad903afc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result['answer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "029246db-e29f-4c68-852a-f317ba793c5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6069076a-5df0-420a-b819-ddc2dc16eb04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a chatbot that works on your documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23e56176-a8fc-4a08-a01d-edc1901ee019",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The chatbot code has been updated a bit since filming. \n",
+    "# The GUI appearance also varies depending on the platform it is running on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56fd6007-7303-4182-b218-708242c17b4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On définit ici toute la chaîne qui part de la question, jusqu'à la réponse du chatbot\n",
+    "# Pour des raisons d'ergonomie du chatbot, \n",
+    "# on ne met pas la memory dans ce ConversationalRetrievalChain\n",
+    "def load_db(chain_type, k):\n",
+    "    # load documents\n",
+    "    loader = TextLoader(\"bdc.txt\")\n",
+    "    documents = loader.load()\n",
+    "    # split documents - ajouter éventuellement dans les options separator=\"(?<=\\. )\"\n",
+    "    headers_to_split_on = [\n",
+    "    (\"###\", \"Header 1\"),\n",
+    "    (\"##\", \"Header 2\"),\n",
+    "    (\"#\", \"Header 3\")]\n",
+    "    markdown_splitter = MarkdownHeaderTextSplitter(\n",
+    "    headers_to_split_on=headers_to_split_on)\n",
+    "    docs = markdown_splitter.split_text(documents[0].page_content)\n",
+    "    # define embedding\n",
+    "    embeddings = HuggingFaceEmbeddings()\n",
+    "    # create vector database from data\n",
+    "    vectordb = Chroma.from_documents(\n",
+    "    documents=docs,\n",
+    "    embedding=embeddings)\n",
+    "    # define retriever\n",
+    "    retriever = db.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": k})\n",
+    "    # create a chatbot chain. Memory is managed externally.\n",
+    "    # définir au préalable le modèle qu'on veut utiliser\n",
+    "    qa = ConversationalRetrievalChain.from_llm(\n",
+    "        llm=llm, \n",
+    "        chain_type=chain_type, \n",
+    "        retriever=retriever, \n",
+    "        return_source_documents=True,\n",
+    "        return_generated_question=True,\n",
+    "    )\n",
+    "    return qa \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c73aa5da-83f3-4e84-af9c-bf792b98186b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import panel as pn\n",
+    "import param\n",
+    "\n",
+    "class cbfs(param.Parameterized):\n",
+    "    chat_history = param.List([])\n",
+    "    answer = param.String(\"\")\n",
+    "    db_query  = param.String(\"\")\n",
+    "    db_response = param.List([])\n",
+    "    \n",
+    "    def __init__(self,  **params):\n",
+    "        super(cbfs, self).__init__( **params)\n",
+    "        self.panels = []\n",
+    "        self.qa = load_db(\"stuff\", 4)\n",
+    "    \n",
+    "    def call_load_db(self, count):\n",
+    "        if count == 0 or file_input.value is None:  # init or no file specified :\n",
+    "            return pn.pane.Markdown(f\"Loaded File\")\n",
+    "        else:\n",
+    "            button_load.button_style=\"outline\"\n",
+    "            self.qa = load_db(\"stuff\", 4)\n",
+    "            button_load.button_style=\"solid\"\n",
+    "        self.clr_history()\n",
+    "        return pn.pane.Markdown(f\"Loaded File\")\n",
+    "\n",
+    "# C'est ci-dessous qu'on ajoute la memory\n",
+    "    def convchain(self, query):\n",
+    "        if not query:\n",
+    "            return pn.WidgetBox(pn.Row('User:', pn.pane.Markdown(\"\", width=600)), scroll=True)\n",
+    "        result = self.qa({\"question\": query, \"chat_history\": self.chat_history})\n",
+    "        self.chat_history.extend([(query, result[\"answer\"])])\n",
+    "        self.db_query = result[\"generated_question\"]\n",
+    "        self.db_response = result[\"source_documents\"]\n",
+    "        self.answer = result['answer'] \n",
+    "        self.panels.extend([\n",
+    "            pn.Row('User:', pn.pane.Markdown(query, width=600)),\n",
+    "            pn.Row('ChatBot:', pn.pane.Markdown(self.answer, width=600, style={'background-color': '#F6F6F6'}))\n",
+    "        ])\n",
+    "        inp.value = ''  #clears loading indicator when cleared\n",
+    "        return pn.WidgetBox(*self.panels,scroll=True)\n",
+    "\n",
+    "    @param.depends('db_query ', )\n",
+    "    def get_lquest(self):\n",
+    "        if not self.db_query :\n",
+    "            return pn.Column(\n",
+    "                pn.Row(pn.pane.Markdown(f\"Last question to DB:\", styles={'background-color': '#F6F6F6'})),\n",
+    "                pn.Row(pn.pane.Str(\"no DB accesses so far\"))\n",
+    "            )\n",
+    "        return pn.Column(\n",
+    "            pn.Row(pn.pane.Markdown(f\"DB query:\", styles={'background-color': '#F6F6F6'})),\n",
+    "            pn.pane.Str(self.db_query )\n",
+    "        )\n",
+    "\n",
+    "    @param.depends('db_response', )\n",
+    "    def get_sources(self):\n",
+    "        if not self.db_response:\n",
+    "            return \n",
+    "        rlist=[pn.Row(pn.pane.Markdown(f\"Result of DB lookup:\", styles={'background-color': '#F6F6F6'}))]\n",
+    "        for doc in self.db_response:\n",
+    "            rlist.append(pn.Row(pn.pane.Str(doc)))\n",
+    "        return pn.WidgetBox(*rlist, width=600, scroll=True)\n",
+    "\n",
+    "    @param.depends('convchain', 'clr_history') \n",
+    "    def get_chats(self):\n",
+    "        if not self.chat_history:\n",
+    "            return pn.WidgetBox(pn.Row(pn.pane.Str(\"No History Yet\")), width=600, scroll=True)\n",
+    "        rlist=[pn.Row(pn.pane.Markdown(f\"Current Chat History variable\", styles={'background-color': '#F6F6F6'}))]\n",
+    "        for exchange in self.chat_history:\n",
+    "            rlist.append(pn.Row(pn.pane.Str(exchange)))\n",
+    "        return pn.WidgetBox(*rlist, width=600, scroll=True)\n",
+    "\n",
+    "    def clr_history(self,count=0):\n",
+    "        self.chat_history = []\n",
+    "        return \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3344b0b6-f10e-4564-95c6-ebb6dd790695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a chatbot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b003ac7-595f-4bfd-969d-0d0afed6d9d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cb = cbfs()\n",
+    "\n",
+    "file_input = pn.widgets.FileInput(accept='.txt')\n",
+    "button_load = pn.widgets.Button(name=\"Load DB\", button_type='primary')\n",
+    "button_clearhistory = pn.widgets.Button(name=\"Clear History\", button_type='warning')\n",
+    "button_clearhistory.on_click(cb.clr_history)\n",
+    "inp = pn.widgets.TextInput( placeholder='Posez votre question ici…')\n",
+    "\n",
+    "bound_button_load = pn.bind(cb.call_load_db, button_load.param.clicks)\n",
+    "conversation = pn.bind(cb.convchain, inp) \n",
+    "\n",
+    "jpg_pane = pn.pane.Image( './img/LogoInsee.jpg')\n",
+    "\n",
+    "tab1 = pn.Column(\n",
+    "    pn.Row(inp),\n",
+    "    pn.layout.Divider(),\n",
+    "    pn.panel(conversation,  loading_indicator=True, height=300),\n",
+    "    pn.layout.Divider(),\n",
+    ")\n",
+    "tab2= pn.Column(\n",
+    "    pn.panel(cb.get_lquest),\n",
+    "    pn.layout.Divider(),\n",
+    "    pn.panel(cb.get_sources ),\n",
+    ")\n",
+    "tab3= pn.Column(\n",
+    "    pn.panel(cb.get_chats),\n",
+    "    pn.layout.Divider(),\n",
+    ")\n",
+    "tab4=pn.Column(\n",
+    "    pn.Row( file_input, button_load, bound_button_load),\n",
+    "    pn.Row( button_clearhistory, pn.pane.Markdown(\"Clears chat history. Can use to start a new topic\" )),\n",
+    "    pn.layout.Divider(),\n",
+    "    pn.Row(jpg_pane.clone(width=400))\n",
+    ")\n",
+    "dashboard = pn.Column(\n",
+    "    pn.Row(pn.pane.Markdown('# ChatWithYourData_Bot')),\n",
+    "    pn.Tabs(('Conversation', tab1), ('Database', tab2), ('Chat History', tab3),('Configure', tab4))\n",
+    ")\n",
+    "dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "305916b6-0db1-4f9c-8302-1ae2f2d9e918",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80657b4d-d681-4578-8dcd-2748163fd775",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbeef1a1-ddc5-43ed-bf27-3718d911f7a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d8d3a5-6418-4736-93a3-1e15a4e92519",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12795cff-cb6d-4feb-929e-2436cb94811f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "463dde45-e91b-43d8-b400-d152f854776f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "876efb8c-02f2-4838-a52e-82ac2a75656a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b98bdf9-7f09-459f-9994-27e102cafda2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fdee844-b04a-4589-bdcf-e4d55da05bef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc2e1df-c179-4fac-961c-2002885d152b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0364961-16cd-4ade-9c04-5f8c3e6e6c55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0427bd-0b56-444e-b894-9b5ef6ecdae8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdf37333-f426-4cbb-a2ec-ef1ba4c14a99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e0e2a5-ba97-4d56-b31a-ccd88e0cde84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6541f2a-9c37-41e4-b490-cb28ab2a1954",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e6e3cc3-31ce-4dfe-964f-12a049c19cad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e4fe58b-ffdc-4ee5-9bca-a95796856e9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a89b99b6-a70b-4b8c-9ef3-eddcf2e99f7d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -858,7 +1250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
